<resources>
    <string name="app_name">Freelancr</string>
    <string name="invoice_customer_hint">Name of customer, or business:</string>
    <string name="invoice_owed_hint">Amount of money owed:</string>
    <string name="customer_title_label">Customer:</string>
    <string name="amount_owed_label">Payment owed:</string>
    <string name="date_received">Date began:</string>
    <string name="date_completed">Date completed:</string>
    <string name="received_payment">Received Payment</string>
    <string name="date_picker_title">Date received:</string>
    <string name="new_invoice">New Invoice</string>
    <string name="delete_invoice">Delete Invoice</string>
    <string name="email_address_hint">Enter the customer\'s email address</string>
    <string name="phone_number_hint">Enter the customer\'s phone number</string>
    <string name="email_label">Email address:</string>
    <string name="phone_label">Phone number:</string>

</resources>
